INCLUDES= \
	$(JPEG_CFLAGS) \
	$(GLU_CFLAGS) \
	$(GLIB_CFLAGS)

bin_PROGRAMS=satview

satview_SOURCES =	\
        constants.cpp   \
        defines.h       \
        display.h       \
        display.cpp     \
        model.h         \
        model.cpp       \
	main.cpp

satview_LDADD = \
	$(JPEG_LIBS) \
	$(GLU_LIBS) \
	$(GLIB_LIBS)
